cmake_minimum_required(VERSION 3.19)
project(untitled2)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled2 main.cpp)
add_executable(hello hello.cpp)
add_executable(DFS suanfa/DFS.cpp)
add_executable(tree homework/tree.cpp)

add_executable(map homework/map.cpp)
add_executable(ll suanfa/ll.cpp)
add_executable(search homework/search.cpp)
add_executable(sort homework/sort.cpp)
add_executable(Huffman homework/Huffman.cpp)
add_executable(01beibao suanfa/01beibao.cpp)
add_executable(wanquanbeibao suanfa/wanquanbeibao.cpp)
add_executable(duochongbeibao suanfa/duochongbeibao.cpp)
add_executable(qianzhuihe suanfa/qianzhuihe.cpp)
add_executable(qujianhe homework/qujianhe.cpp)
add_executable(erfen suanfa/erfen.cpp)
add_executable(fudianshuerfen suanfa/fudianshuerfen.cpp)
add_executable(zhiyinshu suanfa/zhiyinshu.cpp)
add_executable(drink exercise/drink.cpp)
add_executable(GPA exercise/GPA.cpp)

add_executable(Poker exercise/Poker.cpp)
add_executable(Distance exercise/Distance.cpp)
add_executable(Discount exercise/Discount.cpp)
add_executable(Game exercise/Game.cpp)
add_executable(A exercise/A.cpp)
add_executable(B exercise/B.cpp)
add_executable(C exercise/C.cpp)
add_executable(D exercise/D.cpp)
add_executable(E exercise/E.cpp)